fix respect_macos_dark_mode branch after rebase