@@ -1,29 +1,37 @@
-/*
- * This file was generated by the Gradle 'init' task.
-
+/**
+ * This file is part of muCommander, http://www.mucommander.com
  *
- * This generated file contains a sample Java Library project to get you started.
- * For more details take a look at the Java Libraries chapter in the Gradle
- * User Manual available at https://docs.gradle.org/6.2/userguide/java_library_plugin.html
+ * muCommander is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * muCommander is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-
-plugins {
-    id 'biz.aQute.bnd.builder'
-}
 
 test.useTestNG()
 
 repositories.mavenCentral()
 
 dependencies {
+    api project(":mucommander-command")
+    api project(":mucommander-commons-file")
+    api project(":mucommander-commons-runtime")
     api project(":mucommander-commons-util")
     api project(":mucommander-core")
     api project(":mucommander-os-api")
+    api project(":mucommander-preferences")
     api project(":mucommander-process")
     api project(":mucommander-translator")
 
-    comprise 'net.java.dev.jna:jna-platform:5.12.1'
-    implementation 'com.googlecode.plist:dd-plist:1.23'
+    implementation 'net.java.dev.jna:jna-platform:5.12.1'
+    comprise 'com.googlecode.plist:dd-plist:1.23'
 
     // the java.desktop module that contains macOS-specific extensions
     compileOnly files('libs/java.desktop.jar')
@@ -32,35 +40,42 @@ dependencies {
     testImplementation 'org.testng:testng:7.11.0'
 }
 
-jar {
-    from configurations.comprise.collect { it.isDirectory() ? it : zipTree(it).matching {
-        exclude 'com/sun/jna/aix*/**'
-        exclude 'com/sun/jna/freebsd*/**'
-        exclude 'com/sun/jna/linux*/**'
-        exclude 'com/sun/jna/openbsd*/**'
-        exclude 'com/sun/jna/sunos*/**'
-        exclude 'com/sun/jna/win*/**'
-        exclude 'META-INF/**'
-        exclude 'com/sun/jna/platform/linux/**'
-        exclude 'com/sun/jna/platform/unix/**'
-        exclude 'com/sun/jna/platform/win32/**'
-        exclude 'com/sun/jna/platform/wince/**'
-    } }
+// Note: macOS module uses non-modular dd-plist library
+// We compile on classpath (not module path) with --add-reads=ALL-UNNAMED
+compileJava {
+    options.compilerArgs += ['--add-reads', 'org.mucommander.os.macos=ALL-UNNAMED']
+}
 
-    bundle {
-        bnd ('Bundle-Name': 'muCommander-os-macos',
-                'Bundle-Vendor': 'muCommander',
-                'Bundle-Description': 'macOS specifics',
-                'Bundle-DocURL': 'https://www.mucommander.com',
-                'Bundle-Activator': 'com.mucommander.desktop.macos.Activator',
-                'Export-Package': 'com.mucommander.ui.process',
-                'Import-Package': '!com.sun.jna.*,*',
-                'Specification-Title': "muCommander",
-                'Specification-Vendor': "Arik Hadas",
-                'Specification-Version': project.version,
-                'Implementation-Title': "muCommander",
-                'Implementation-Vendor': "Arik Hadas",
-                'Implementation-Version': revision,
-                'Build-Date': new Date().format('yyyyMMdd'))
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    // Embed dd-plist library (comprise dependency)
+    from configurations.comprise.collect { it.isDirectory() ? it : zipTree(it).matching {
+        exclude 'META-INF/**'
+    } }
+}
+
+// JPMS module - compile module-info separately
+task compileModuleInfo(type: JavaCompile) {
+    dependsOn compileJava
+    source = fileTree('src/main/resources/module-info') {
+        include 'module-info.java'
     }
+    destinationDirectory = compileJava.destinationDirectory
+    classpath = files()
+
+    doFirst {
+        def filteredClasspath = compileJava.classpath.filter {
+            !it.name.contains('plist') &&
+            !it.name.contains('java.desktop.jar')
+        }
+        options.compilerArgs += [
+            '--module-path', filteredClasspath.asPath,
+            '--patch-module', 'org.mucommander.os.macos=' + compileJava.destinationDirectory.get().asFile.path
+        ]
+    }
+}
+
+classes {
+    dependsOn compileModuleInfo
 }
