@@ -1,3 +1,20 @@
+/**
+ * This file is part of muCommander, http://www.mucommander.com
+ *
+ * muCommander is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * muCommander is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 dependencies {
     api project(':mucommander-commons-file')
     api project(':mucommander-protocol-api')
@@ -5,9 +22,9 @@ dependencies {
     api project(':mucommander-translator')
     api project(':mucommander-core')
 
-    comprise 'com.google.api-client:google-api-client:2.0.0'
-    comprise 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
-    comprise 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
+    api 'com.google.api-client:google-api-client:2.0.0'
+    api 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+    api 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
 
     testImplementation(platform('org.junit:junit-bom:5.14.1'))
     testImplementation('org.junit.jupiter:junit-jupiter')
@@ -17,27 +34,31 @@ dependencies {
 
 repositories.mavenCentral()
 
+// This module has module-info.java for JPMS runtime but compiles on classpath
+// to avoid split package issues from google-api-services-drive dependencies
+// The module-info.java is kept separately in resources and included in the jar
+
+// Ensure compilation waits for mucommander-core module-info
+tasks.named('compileJava').configure {
+    dependsOn(':mucommander-core:compileModuleInfo')
+}
+
 jar {
-    from configurations.comprise.collect { it.isDirectory() ? it : zipTree(it).matching {
-        exclude 'META-INF/**'
-    }}
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    bundle {
-        bnd ('Bundle-Name': 'muCommander-gdrive',
-                'Bundle-Vendor': 'muCommander',
-                'Bundle-Description': 'Plugin for Google-Drive',
-                'Bundle-DocURL': 'https://www.mucommander.com',
-                'Export-Package': 'com.mucommander.commons.protocol.gdrive,com.google.api.client.auth.oauth2',
-                'Import-Package': '!org.apache.avalon.framework.logger,!org.apache.log,!org.apache.log4j,!com.google.appengine.api,!com.google.apphosting.api,!com.google.appengine.api.utils,!io.grpc.override,*',
-                'Bundle-Activator': 'com.mucommander.commons.file.protocol.gdrive.Activator',
-                'Specification-Title': "muCommander",
-                'Specification-Vendor': "Arik Hadas",
-                'Specification-Version': project.version,
-                'Implementation-Title': "muCommander",
-                'Implementation-Vendor': "Arik Hadas",
-                'Implementation-Version': revision,
-                'Build-Date': new Date().format('yyyyMMdd'))
+
+    from('src/main/resources/module-info') {
+        include 'module-info.java'
+        into 'META-INF'
     }
+}
+
+// JPMS module - configuration in module-info.java
+// Note: Google Drive protocol uses google-api-services-drive library which is an unnamed module
+// We compile on classpath (not module path) to avoid split package issues with Google API dependencies
+compileJava {
+    options.compilerArgs += [
+        '--add-reads', 'org.mucommander.protocol.gdrive=ALL-UNNAMED'
+    ]
 }
 
 test {
