@@ -1,4 +1,30 @@
+/**
+ * This file is part of muCommander, http://www.mucommander.com
+ *
+ * muCommander is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * muCommander is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 repositories.mavenCentral()
+
+// Exclude module-info.java from resources to prevent it from being compiled with main sources
+sourceSets {
+    main {
+        resources {
+            exclude 'module-info/**'
+        }
+    }
+}
 
 dependencies {
     api project(':mucommander-core')
@@ -23,20 +49,43 @@ dependencies {
     testImplementation 'org.testng:testng:7.11.0'
 }
 
-jar {
-    bundle {
-        bnd ('Bundle-Name': 'muCommander-viewer-binary',
-                'Bundle-Vendor': 'muCommander',
-                'Bundle-Description': 'Library for binary/hexadecimal viewer/editor',
-                'Bundle-DocURL': 'https://www.mucommander.com',
-                'Export-Package': 'com.mucommander.viewer.binary',
-                'Bundle-Activator': 'com.mucommander.viewer.binary.Activator',
-                'Specification-Title': "muCommander",
-                'Specification-Vendor': "Miroslav Hajda",
-                'Specification-Version': project.version,
-                'Implementation-Title': "muCommander",
-                'Implementation-Vendor': "Miroslav Hajda",
-                'Implementation-Version': revision,
-                'Build-Date': new Date().format('yyyyMMdd'))
+// JPMS module - configuration in module-info.java
+// Note: Binary viewer uses non-modular bined and binary_data libraries
+// We compile on classpath (not module path) to access unnamed module
+
+compileJava {
+    options.compilerArgs += ['--add-reads', 'org.mucommander.viewer.binary=ALL-UNNAMED']
+}
+
+// Compile module-info separately
+task compileModuleInfo(type: JavaCompile) {
+    dependsOn compileJava
+    source = fileTree('src/main/resources/module-info') {
+        include 'module-info.java'
     }
+    destinationDirectory = compileJava.destinationDirectory
+    classpath = files()  // Empty classpath since we're using module path
+
+    doFirst {
+        def filteredClasspath = compileJava.classpath.filter {
+            !it.name.contains('bined') &&
+            !it.name.contains('binary_data') &&
+            !it.name.contains('jsr305')
+        }
+
+        // Put dependencies on module path for module-info compilation
+        options.compilerArgs += [
+            '--module-path', filteredClasspath.asPath,
+            '--patch-module', 'org.mucommander.viewer.binary=' + compileJava.destinationDirectory.get().asFile.path
+        ]
+    }
+}
+
+classes {
+    dependsOn compileModuleInfo
+}
+
+jar {
+    dependsOn compileModuleInfo
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
